@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.61 2008/11/13 20:56:47 tho Exp $
+$Id: ChangeLog,v 1.62 2008/11/14 15:05:57 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 1.x.y
+	- [misc] u_strlcpy and u_strlcat added
 	- added shared lib support for MinGW, Cygwin, Solaris and Dragonfly BSD
 	  (need MaKL >= 1.8.x)
 	- [list] u_list_foreach and u_list_iforeach macros added
